assets/CSS/style.css
/*caroussel*/


.carousel-item img {
    height: 90vh; 
    overflow: hidden;
    object-fit: cover;
      } 

.carousel-restoration {
    object-position: top;
}

/* testimonials */

.testimonial-section {
    margin: 0 20px;
}
.flexbox-container {
    margin: 5vh;
}

.flexbox-container-text {
    font-family: 'BenchNine', sans-serif;
    text-align: justify;
    max-width: 400px;
    margin-top: 15px;
    font-size: 1.3em;
}

.flexbox-container-picture {
    display: block;
    max-width: 300px;
    margin: 0 auto;
    object-fit: cover;
}

.button {
    display: block;
    margin: 15px auto;
    width: 150px;

}

/* Contact form */

.contact-form {
    margin-top: 20px;
    
}

.contact-form-heading{
    background-color: #e5e7ec;
    position:relative;
    width: 100vw;
    
}

.contact-form-heading1{
    position:relative;
    top: 15px; 
    text-align: center;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    
}

.contact-form-heading2{
    text-align: center;
    font-family: 'Great Vibes', cursive;
    font-size: 3em;
}

.form-element {
    display: block;
    margin: 5px auto;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    padding: 5px;
    width: 270px;
    
}

.form-text {
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    padding: 5px;
    text-align: center;
    
}

.form-text-area {
    display: block;
    margin: 10px auto;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
    width:90%; 
    max-width: 800px;
}

/* Footer */

footer {
    background-color: #e5e7ec;
    height:50px;
    position: fixed;
    bottom: 0;
    right: 0;
    }

footer div {
    text-align:center;
    padding-top:10px;
    }

.link-socmed {
    padding-left:5px;
    padding-right:5px;
    color:black;
    }

.link-socmed:hover {
    color: #949599;
    }

.copyright {position:absolute; 
    display:inline-block;
    right:5px; 
    bottom:0; 
    margin:0 auto;
    font-family: 'BenchNine', sans-serif;
    }

/* Gallery */

.gallery {
    margin-top: 45px;
}

.gallery-navigation {
    background-color: #e5e7ec;
    height: 45px;
    padding: 7px;
    text-align: center;
    position: fixed;
    width: 100vw;
     }

.gallery-navigation li {
    display:inline-block;
    }

.gallery-navigation a {
    text-decoration:none;
    list-style-type: none;
    text-decoration:none;
    color: #949599;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.2em;
    }
    
.gallery-navigation a:hover{
    border-bottom:1px solid #777777;
    }

.gallery-container {
    display: flex;   
    max-width: 100vw;
    justify-content: center;  
}

.gallery-container img {
    width: 90vw; 
    margin: 5px 5px;
    border-radius: 8px;
    object-fit: cover;
}

.gallery-text {
    font-family: 'BenchNine', sans-serif;
    text-align: center;
}
.gallery25{
    object-position: right;
}

/* Pckages */

.packages-headline {
    color: #949599;
    font-family: 'BenchNine', sans-serif;
    font-size: 10vw;
    text-align:center;
    margin: 30px 10px;
}

.package{
    display: flex;    
    flex-wrap: wrap;
    align-items: baseline;
    justify-content: center;
}
.section-name{
    color: #949599;
    font-family: 'BenchNine', sans-serif;
    text-align: center;
    font-size: 7vw;
}

.package-image { 
    display: inline;
    margin: 7px 7px;
   }

.package-image img { 
    border-radius: 8px;
    object-fit: cover;
    max-width: 95vw;
}

.package-description{
    max-width: 95vw; 
    object-fit: cover;
    font-family: 'BenchNine', sans-serif;
    text-align: center;
    font-size: 1.3em;
}

hr {
    border: 0; 
    color: #949599;
    border-top: 2px solid ;
    border-radius: 5px;
    margin: 5vh auto;
    width:15vw;
  }

/* About */

.about-urszula-header {
    margin-top: 40px;
}

.retouch-skills-header{
    margin:3vh 0
}

.about{
    margin: 30px 4vw;
    max-width: 100vw;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 20px;
}

.photographer-picture-container{ 
    border-style: solid;
    border-color: #cccccc;
    border-width: 3px;
    border-radius: 50%;
    flex-grow: 1;
    max-width: 450px;
    max-height: 450px;
 }
  
 .photographer-picture{
    width:100%;
    height:100%;
    background: no-repeat center center;
    object-fit: cover;
    display: block;
    border-radius: 50%;
    margin: 0 auto;
}

.about-text-container{
    object-fit: cover;
    flex-grow: 1;
    max-width: 400px;
}
  
 .about-text{
    padding: 0;
    margin: auto;
    text-align: center;
    color: #949599;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
}
 
.retouch {
    margin: 30px 4vw;
    max-width: 100vw;
    display: flex;
    flex-wrap: wrap-reverse;
    align-items: center;
    justify-content: center;
    gap: 20px;
 }
  
 .retouch-picture-container{
    flex-grow: 1;
    max-width: 450px;
    max-height: 450px;
 }
  
 .retouch-picture{
    width:100%;
    height:100%;
    background: no-repeat center center;
    object-fit: cover;
    display: block;
    margin: 0 auto;
    border-radius: 8px;
    }
  
 .retouch-text-container{
    object-fit: cover;
    flex-grow: 1;
    max-width: 400px;
 }
  
 .retouch-text{
    padding: 0;
    margin: auto;
    text-align: center;
    color: #949599;
    font-family: 'BenchNine', sans-serif;
    font-size: 1.3em;
 }
  
 

/* media quieries */

@media screen and (max-width: 1491px) {
    .hidden-testimonial {
        display: none !important;
    }
}

@media screen and (min-width: 1492px) {
    .visible-testimonial {
        display: none !important;
    }
}

@media screen and (min-width: 400px) {
    .gallery-navigation li{
        font-size: 27px;}

    .gallery-navigation {
        height:65px;
    }
    .gallery {
        margin-top: 65px;
    }
    .package{
        margin: 0 10vw;
    }
}

@media screen and (min-width: 500px) { 
    .package-image img {
        max-width: 475px;
    }
    .package-description{
        max-width: 475px;
    }
}

@media screen and (min-width: 800px) {
    .gallery-container img {
        width: 49vw;
    }
    .package{
        margin:0 40px;
    }
    .packages-headline {
       font-size: 4em;
    }
   
    .package-description{
        margin: 20px;
    }
    .gallery-container {
        margin:0 16px;
    }
    .package-image img{
        margin: 0 40px;
    }
 }

 @media screen and (min-width: 900px) {
    .gallery-container img {
        width: 32vw;
    }
 }
  
 @media screen and (min-width: 1025px) {
    .gallery-container img {
        width: 24vw;
    }
    .section-name{
        font-size: 3em;
    }
 }
  
 @media screen and (min-width: 1164px) {
    .hide-big {
        display: none;}
}
  
 @media screen and (max-width: 1163px) {
    .hide-small {
        display: none !important;
    }
}

